--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -14,6 +14,12 @@ jobs:
       - name: checkout repository
         uses: actions/checkout@v5
 
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'zulu'
+
       - name: execute mvn build
         run: mvn package -DskipTests
 
