--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -21,7 +21,7 @@ jobs:
           distribution: 'zulu'
 
       - name: execute mvn build
-        run: mvn package -DskipTests
+        run: mvn -B package -DskipTests
 
       - name: execute mvn tests
-        run: mvn test
+        run: mvn -B test
