--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -1,5 +1,5 @@
 name: build and test with maven
-run-name: mvn:build:test -
+run-name: mvn:build:test - ${{ github.event.head_commit.message }}
 
 on:
   push:
@@ -24,13 +24,10 @@ jobs:
         run: mvn -B -q package -DskipTests
 
       - name: execute mvn tests
-        run: mvn -B test
-
-#      - name: Generate Surefire report
-#        run: mvn surefire-report:report-only
+        run: mvn -B test surefire-report:report-only
 
       - name: Upload Test Report as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: surefire-report
-          path: target/surefire-reports
+          path: target/site
