--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
 
 	<properties>
 		<java.version>21</java.version>
-
 		<!-- ✔ Spring Cloud Version passend zu Boot 3.x -->
 		<spring-cloud.version>2024.0.1</spring-cloud.version>
 	</properties>
@@ -83,8 +82,46 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<exclusions>
+				<!-- Exclude JUnit 4 to avoid conflicts with Spock -->
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Groovy für Spock -->
+		<dependency>
+			<groupId>org.apache.groovy</groupId>
+			<artifactId>groovy</artifactId>
+			<version>4.0.11</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Spock Core -->
+		<dependency>
+			<groupId>org.spockframework</groupId>
+			<artifactId>spock-core</artifactId>
+			<version>2.4-M1-groovy-4.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Spock Spring Integration -->
+		<dependency>
+			<groupId>org.spockframework</groupId>
+			<artifactId>spock-spring</artifactId>
+			<version>2.4-M1-groovy-4.0</version>
+			<scope>test</scope>
+		</dependency>
+
+<!--		&lt;!&ndash; Mockito extention &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.mockito</groupId>-->
+<!--			<artifactId>mockito-junit-jupiter</artifactId>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<!-- ✔ Version Management for Spring Cloud -->
@@ -130,6 +167,23 @@
 						<phase>verify</phase>
 						<goals>
 							<goal>report-only</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- Groovy Maven Plugin -->
+			<plugin>
+				<groupId>org.codehaus.gmavenplus</groupId>
+				<artifactId>gmavenplus-plugin</artifactId>
+				<version>2.1.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+							<goal>generateStubs</goal>
+							<goal>generateTestStubs</goal>
+							<goal>removeStubs</goal>
+							<goal>removeTestStubs</goal>
 						</goals>
 					</execution>
 				</executions>
